fix: implement vercel proxy rewrite for auth and images

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
+      "source": "/api/(.*)",
+      "destination": "https://einstorebcknd.vercel.app/api/$1"
+    },
+    {
+      "source": "/uploads/(.*)",
+      "destination": "https://einstorebcknd.vercel.app/uploads/$1"
     }
   ],
   "routes": [
@@ -14,7 +15,8 @@
       "src": "/static/(.*)",
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
-      }
+      },
+      "continue": true
     },
     {
       "src": "/(.*)",
@@ -22,4 +24,3 @@
     }
   ]
 }
-
