--- a/vercel.json
+++ b/vercel.json
@@ -8,15 +8,10 @@
     {
       "source": "/uploads/(.*)",
       "destination": "https://einstorebcknd.vercel.app/uploads/$1"
-    }
-  ],
-  "routes": [
-    {
-      "handle": "filesystem"
     },
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
